fix: make styles for scrollbar global, remove extra styles for scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,21 +40,21 @@ body {
   overflow-y: auto;
 }
 
-body::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 10px;
 }
 
-body::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   background: var(--transparent-color);
   border-radius: 10px;
 }
 
-body::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
   background: var(--main-color);
   border-radius: 10px;
 }
 
-body::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:hover {
   background: var(--accent-color);
 }
 
